// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Question Test show screen Add Question 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <header>
            <div
              class="header-status"
            >
              <span>
                You're not logged in
              </span>
              <div
                class="cta"
              >
                <a
                  class="button"
                  href="/login"
                >
                  Login
                </a>
              </div>
            </div>
          </header>
        </div>
        <div
          class="header"
        >
          <div>
            <span
              class="link"
            >
              <a
                href="/home"
              >
                List Question
              </a>
            </span>
            <span
              class="link"
            >
              <a
                href="/add"
              >
                Add Question
              </a>
            </span>
            <span
              class="link"
            >
              <a
                href="/leaderboard"
              >
                Leader Board
              </a>
            </span>
          </div>
          <h4>
            Add Question
          </h4>
        </div>
        <div>
          Would You Rather
        </div>
        <div
          class="qs-add"
        >
          <form>
            <div
              class="qs-item-option"
            >
              <div>
                Option 1: 
              </div>
              <input
                data-testid="optionOne"
                size="75"
                value=""
              />
            </div>
            <div
              class="qs-item-option"
            >
              <div>
                Option 2: 
              </div>
              <input
                data-testid="optionTwo"
                size="75"
                value=""
              />
            </div>
            <input
              data-testid="save"
              type="button"
              value="Save"
            />
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <header>
          <div
            class="header-status"
          >
            <span>
              You're not logged in
            </span>
            <div
              class="cta"
            >
              <a
                class="button"
                href="/login"
              >
                Login
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="header"
      >
        <div>
          <span
            class="link"
          >
            <a
              href="/home"
            >
              List Question
            </a>
          </span>
          <span
            class="link"
          >
            <a
              href="/add"
            >
              Add Question
            </a>
          </span>
          <span
            class="link"
          >
            <a
              href="/leaderboard"
            >
              Leader Board
            </a>
          </span>
        </div>
        <h4>
          Add Question
        </h4>
      </div>
      <div>
        Would You Rather
      </div>
      <div
        class="qs-add"
      >
        <form>
          <div
            class="qs-item-option"
          >
            <div>
              Option 1: 
            </div>
            <input
              data-testid="optionOne"
              size="75"
              value=""
            />
          </div>
          <div
            class="qs-item-option"
          >
            <div>
              Option 2: 
            </div>
            <input
              data-testid="optionTwo"
              size="75"
              value=""
            />
          </div>
          <input
            data-testid="save"
            type="button"
            value="Save"
          />
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login Page Test will show Login Page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="login-contents"
      >
        <label
          data-testid="user-label"
        >
          Choose user to login: 
        </label>
        <select>
          <option
            disabled=""
            value=""
          >
            Move to...
          </option>
          <option
            value="sarahedo"
          >
            Sarah Edo
          </option>
          <option
            value="tylermcginnis"
          >
            Tyler McGinnis
          </option>
          <option
            value="mtsamis"
          >
            Mike Tsamis
          </option>
          <option
            value="zoshikanlu"
          >
            Zenobia Oshikanlu
          </option>
        </select>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="login-contents"
    >
      <label
        data-testid="user-label"
      >
        Choose user to login: 
      </label>
      <select>
        <option
          disabled=""
          value=""
        >
          Move to...
        </option>
        <option
          value="sarahedo"
        >
          Sarah Edo
        </option>
        <option
          value="tylermcginnis"
        >
          Tyler McGinnis
        </option>
        <option
          value="mtsamis"
        >
          Mike Tsamis
        </option>
        <option
          value="zoshikanlu"
        >
          Zenobia Oshikanlu
        </option>
      </select>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
